prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-backend-auth.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"backend\", \"auth\"])"
---
Run a backend agent's own authentication flow

Usage: via backend auth [NAME]

Arguments:
  [NAME]
          Backend id to authenticate

Options:
  -h, --help
          Print help (see a summary with '-h')
