prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-backend-install.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"backend\", \"install\"])"
---
Install a backend agent, with the ACP adapter it needs

Usage: via backend install [OPTIONS] [NAME]

Arguments:
  [NAME]
          Backend id to install; generic acp is not installable

Options:
  -y, --yes
          Stop confirming each script-based install step (use with care)

  -h, --help
          Print help (see a summary with '-h')
