prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-backend-status.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"backend\", \"status\"])"
---
Read-only readiness check; installs nothing, signs in to nothing

Usage: via backend status [OPTIONS]

Options:
      --backend <NAME>
          Check one backend only; every backend by default

      --json
          Emit the report as JSON for a script

  -h, --help
          Print help (see a summary with '-h')
