prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-backend.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"backend\"])"
---
Backend agent lifecycle: install, status, auth

Usage: via backend <COMMAND>

Commands:
  install  Install a backend agent, with the ACP adapter it needs
  status   Read-only readiness check; installs nothing, signs in to nothing
  auth     Run a backend agent's own authentication flow

Options:
  -h, --help
          Print help
