prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-config-set.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"config\", \"set\"])"
---
Update the Realtime model in config.env

Usage: via config set [OPTIONS]

Options:
      --realtime-model <ID>
          Realtime model id; must be one the Realtime catalog knows

  -h, --help
          Print help (see a summary with '-h')
