prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-config-show.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"config\", \"show\"])"
---
Show the effective Realtime model (prints no credentials)

Usage: via config show

Options:
  -h, --help
          Print help
