prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-config.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"config\"])"
---
Show or edit config.env

Usage: via config [COMMAND]

Commands:
  show  Show the effective Realtime model (prints no credentials)
  set   Update the Realtime model in config.env

Options:
  -h, --help
          Print help
