prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-mcp-serve.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"mcp-serve\"])"
---
stdio MCP server exposing the five coordination tools

Usage: via mcp-serve [OPTIONS]

Options:
      --url <URL>
          Gateway the coordination tools act against
          
          [env: VIA_URL]
          [default: http://127.0.0.1:3101]

  -h, --help
          Print help (see a summary with '-h')
