prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via-service.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[\"service\"])"
---
launchd / systemd unit for the Gateway

Usage: via service <COMMAND>

Commands:
  install  Install the unit and start it
  start    Start the installed unit
  stop     Stop the running unit

Options:
  -h, --help
          Print help
