prototypes/dp00-executable-v3/reference-base/source/apps/via/tests/snapshots/help_surface__via.snap
---
source: apps/via/tests/help_surface.rs
expression: "long_help(&[])"
---
VIA — the Voice Interaction Agent gateway.

Run `via gateway` to serve, `via chat` to talk to a running Gateway, and `via config` to see or change what either of them will use.

Usage: via <COMMAND>

Commands:
  gateway    Run the Gateway in the foreground
  chat       Text client: drive a running Gateway with no audio and no model weights
  config     Show or edit config.env
  backend    Backend agent lifecycle: install, status, auth
  mcp-serve  stdio MCP server exposing the five coordination tools
  service    launchd / systemd unit for the Gateway

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
